--- a/v2rayN/v2rayN/Resx/ResUI.zh-Hans.resx
+++ b/v2rayN/v2rayN/Resx/ResUI.zh-Hans.resx
@@ -346,4 +346,7 @@
   <data name="StartPacFailed" xml:space="preserve">
     <value>PAC服务启动失败,请用管理员启动</value>
   </data>
+  <data name="LvWeight" xml:space="preserve">
+    <value>权重</value>
+  </data>
 </root>
